# bots

./: Gemfile  README.md  Rakefile
alpha_bot/: Pipfile  alpha_bot.py  main.py  test_alpha_bot.py
oauth/: Gemfile  README.md  config.ru  twitter.rb
oauth/views/: layout.erb  tokens.erb
tech-mottos/: tech_mottos.py
tech_mottos/: .flake8  .gitignore  .terraform.lock.hcl  Gemfile  Makefile  README.md  Rakefile  main.py  main.tf  pyproject.toml  requirements.txt  shell.nix  tech_mottos.gemspec  tech_mottos.py  tech_mottos.rb
tech_mottos/etc/: icon.acorn
tech_mottos/lib/: tech_mottos.rb
tech_mottos/lib/tech_mottos/: tasks.rb  version.rb
tech_mottos/test/: tech_mottos_test.rb  test_helper.rb
twitter/: Gemfile  LICENSE.txt  README.md  twitter.gemspec
twitter/lib/: twitter.rb
twitter/test/: test_helper.rb  twitter_test.rb
