[tool.poetry]
name = "tech_mottos"
version = "0.1.0"
description = ""
authors = ["Alpha Chen <alpha@kejadlen.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pyright = "^1.1.247"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = "package"
